--- a/Tichu/styles/general.css
+++ b/Tichu/styles/general.css
@@ -41,9 +41,9 @@ body {
 }
 
 .play-area .play {
-    height: 150px;
     float: none;
     width: 100%;
+    position:absolute;
 }
 
 .play-area .pass {
