--- a/Tichu/styles/tichu.css
+++ b/Tichu/styles/tichu.css
@@ -33,3 +33,23 @@ ul.hand-vertical {
 .sidebar .header {
     font-size: x-large;
 }
+
+.play-area .left {
+    top: 120px;
+    left: 20px;
+}
+
+.play-area .top {
+    top: 20px;
+    left: 200px;
+}
+
+.play-area .right {
+    top: 80px;
+    left: 450px;
+}
+
+.play-area .bottom {
+    top: 260px;
+    left: 300px;
+}
