--- a/Tichu/styles/tichuSM.css
+++ b/Tichu/styles/tichuSM.css
@@ -9,6 +9,7 @@
     width: 84px;
     height: 56px;
     margin-top: -45px;
+    margin-left: 0px;
 }
 
 .hand-vertical .card-spacer {
@@ -16,10 +17,13 @@
     height: 56px;
     margin-top: -40px;
     border: 0px;
+    margin-left: 0px;
 }
 
-ul.hand-vertical {
+div.hand-vertical {
+    width: 84px;
     margin-top: 25px;
+    margin-left: 0px;
 }
 
 .card-shape {
@@ -61,4 +65,12 @@ ul.hand-vertical {
 
 div.hand {
     margin-bottom: 12px;
+}
+
+div .activehand {
+    box-shadow: -12px 0px 25px 10px greenyellow;
+}
+
+div .activehandvertical {
+    box-shadow: 0px -16px 25px 10px greenyellow;
 }
