--- a/Tichu/styles/tichu.css
+++ b/Tichu/styles/tichu.css
@@ -62,10 +62,14 @@ div.hand {
     margin-bottom: 20px;
 }
 
+div .button-row {
+    margin-bottom: 20px;
+}
+
 div .activehand {
     box-shadow: -20px 0px 40px 10px greenyellow;
 }
 
 div .activehandvertical {
-    box-shadow: 0px -30px 40px 10px greenyellow;
+    box-shadow: 0px 0px 40px 10px greenyellow;
 }
