--- a/Tichu/styles/tichuM.css
+++ b/Tichu/styles/tichuM.css
@@ -64,10 +64,14 @@ div.hand {
     margin-bottom: 16px;
 }
 
+div .button-row {
+    margin-bottom: 16px;
+}
+
 div .activehand {
     box-shadow: -16px 0px 30px 10px greenyellow;
 }
 
 div .activehandvertical {
-    box-shadow: 0px -20px 30px 10px greenyellow;
+    box-shadow: 0px 0px 30px 10px greenyellow;
 }
